Make button alignment consistent in Safari. (Fix #19)

--- a/asset/css/sharing.css
+++ b/asset/css/sharing.css
@@ -1,9 +1,12 @@
 ul#sharing-buttons {
     list-style: none;
+    line-height: 20px;
+    height: 20px;
 }
 
 li.sharing-button {
     display: inline-block;
+    vertical-align: top;
 }
 
 .fb-share-button span {
@@ -21,7 +24,7 @@ li#sharing-email a, li#sharing-embed a {
     height: 20px;
     line-height: 20px;
     padding: 0 5px;
-    margin: 2px 0 0 -2px;
+    margin: 0 0 0 -2px;
     display: inline-block;
 }
 
